--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
-    </body>
-    <p>I'm hosted with GitHub Pages.</p>
+        <header>hi :3</header>
+    <script src='main.js'></script>
 </html>
